Changelog
=========

3.1.2 (unreleased)
------------------

- DefaultDocumentIndexer: Catch any exceptions raised by transforms and log them.
  [lgraf]

- OGDS updater: Deactivate is_ldap_reachable check. It's unnecessary and broken.
  [lgraf]

- OGDS updater: Deal with mutli-valued fields named the same as an OGDS column.
  [lgraf]

- Modify indexer for documents so that it queries for our own IDocumentIndexer adapter,
  allowing us to choose to index original documents or their preview PDF, depdending on
  opengever.pdfconverter being installed or not.
  [lgraf]

- OGDS updater: fullname field is already single-valued, don't try to treat it like a list.
  [lgraf]

- Moved docucomposer in own package.
  [lknoepfel]

- LDAP util: Only use PagedResults controls if the server advertises to support them.
  [lgraf]

- LDAP util: When checking if attributes are multivalued, store results in a cache.
  This prevents us from hitting the schema more often than necessary, and, as a side
  effect, causes warnings about attributes not declared in schemata to be printed
  only once.
  [lgraf]

- LDAP util: Added method to list all objectClasses defined in schema.
  [lgraf]

- LDAP import: groupid may be in 'cn' or 'fullname' attribute.
  Handle both cases gracefully.
  [lgraf]

- Updated i18n-build with the option to build only one subpackage.
  [lknoepfel]

- Fixed unicode encoding bug in search for autocomplete of ContactsVocabulary.
  [lknoepfel]

3.1.1 (2013-10-23)
------------------

- Fixed CleanupReferencePrefixMapping upgradestep
  (works now for reference to no longer existing objects):
  [phgross]

3.1 (2013-10-23)
----------------

- Update reference prefix manager to the new version of adapters.
  [lknoepfel]

- Fixed client setup: use system user instead of hardcoded username.
  [lknoepfel]

- Fixed redirect when creating a subtask.
  [phgross]

- Integrate ftw.zipexport.
  [lknoepfel]

- Reworked forwarding refuse and reassign functionality.
  [phgross]
